--- a/practice/my google/style.css
+++ b/practice/my google/style.css
@@ -1,6 +1,8 @@
-body {margin: 0;}
+body {margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
 main {
-   padding: 50px 25px 20px 25px;
+   padding: 50px 25px;
 }
 p {
     margin-top: 12px;
@@ -11,11 +13,13 @@ p {
 }
 .nav-item {
     margin-left: 20px;
+    cursor: pointer;
 }
 .nav-item.nav-icon {
-    height: 30px;
-    width: 30px;
+    height: 20px;
+    width: 20px;
     margin-top: 12px;
+    cursor: pointer;
 }
 .round-circle {
     margin-top: 2px;
@@ -23,7 +27,83 @@ p {
     width: 40px;
     border-radius: 50%;
 }
-list-style-type: {
-    none
+.search-content{
+display: flex;
+flex-direction: column;
+align-items: center;
+margin-top: 100px;
 }
-
+.google-image{
+    cursor: pointer;
+}
+.search{
+    position: relative;
+    margin-top: 30px;
+}
+.search-bar{
+    width: 500px;
+    position: relative;
+    height: 50;
+    padding-left: 50px;
+    border-radius: 500px;
+    border: 1px solid #dedede;
+}
+.search-content .button{
+    margin-top: 40px;
+}
+.search-content .button .link{
+    padding: 10px 15px;
+    background-color: #f2f2f2;
+    border-radius: 3px;
+    margin-left: 10px;
+    font-size: 14px;
+}
+.search-content .button a{
+    color: #585858;
+    text-decoration: none;
+}
+.search-content .button a:hover{
+color: black;
+}
+.search-content p{
+    margin-top: 40px;
+    font-size: 13px;
+}
+.search-content p a{
+    text-decoration: none;
+    margin-left: 10px;
+    color: #1f11be;
+}
+.search-content p a:hover{
+    text-decoration: underline;
+}
+footer{
+    position: fixed;
+    bottom: 0px;
+    left: 0;
+    border: 1px solid #e4e4e4;
+    width: 100%;
+    background-color: #f2f2f2;
+}
+footer .country{
+    margin: 10px 30px;
+    color: #585858;
+}
+footer hr{
+    border: 1px solid #e4e4e4;
+}
+footer .footer-item{
+    display: flex;
+    flex: nowrap;
+    justify-content: space-between;
+    margin-right: 20px;
+    font-size: 14px;
+}
+footer .footer-item a{
+    text-decoration: underline;
+    color: #585858;
+    font-size: 14px;
+}
+footer .footer-item a:hover{
+    text-decoration: underline;
+}
